修改blog-servlet数据库为h2数据库